api: add system + backward compatibility
