# plugins/api-platform-backend/docs/backend-openapi.yaml
@@ -106,7 +106,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /apis/definitions/{apiName}:
+  /apis/definitions/{appCode}/{apiName}:
     get:
       summary: Get API versions
       description: Retrieve all versions of a specific API
@@ -114,6 +114,12 @@ paths:
       tags:
         - APIs
       parameters:
+        - name: appCode
+          in: path
+          required: true
+          description: Code of the application
+          schema:
+            type: string
         - name: apiName
           in: path
           required: true
@@ -142,7 +148,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /apis/definitions/{apiName}/{apiVersion}:
+  /apis/definitions/{appCode}/{apiName}/{apiVersion}:
     get:
       summary: Get specific API version
       description: Retrieve a specific version of an API
@@ -150,6 +156,12 @@ paths:
       tags:
         - APIs
       parameters:
+        - name: appCode
+          in: path
+          required: true
+          description: Code of the application
+          schema:
+            type: string
         - name: apiName
           in: path
           required: true
